# SerpAPIscrapper

./: companies_linkedin.csv  pyproject.toml  srapper.py
